<resources>
    <string name="app_name">Weather App</string>
    <string name="title_home">Home</string>
    <string name="title_fav">Favorite</string>
    <string name="title_alert">Alerts</string>
    <string name="title_settings">Settings</string>
    <string name="location">Location</string>
    <string name="units">Units</string>
    <string name="language">Language</string>
    <string name="unite_system">Unit system</string>
    <string name="lang_system">Language system</string>
    <string name="use_device_location">Use device location</string>
    <string name="allow_location">Allow the app to get your location</string>
    <string name="location_disabled">The location for which the weather is displayed</string>
    <string name="land_support">Language the system support</string>
    <string name="city">City</string>
    <string name="temperature">Temperature</string>
    <string name="wind">Wind</string>
    <string name="clouds">Clouds</string>
    <string name="pressure">Pressure</string>
    <string name="humidity">Humidity</string>
    <string name="more_details_about_weather"><u>More Details About Weather</u></string>
    <string name="_24_hour">Weather 24-Hours</string>
    <string name="_7_day_frecast"><u>7-Day Forcast</u></string>

    <string name="google_maps_key">AIzaSyAb_pEfMn2JMapUUFoiQttujJk7CnIGf-A</string>
    <string name="notification_and_alert">"Notification and Alert</string>
    <string name="enter_city_name">Enter City Name</string>
    <string name="add">Add</string>
    <string name="empty_list">Not Favorite List yet Tab to Button To Add</string>

    <string name="error">error</string>
    <string name="added">Added!</string>
    <string name="please">Please Enter Valid Data</string>
    <string name="noThing">NO Thing</string>
    <string name="niceDay">Nice Day</string>
    <string name="deletAlert">Do You Want to Delete this Alert ?!</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="invalid">Invalide Data</string>
    <string name="about">About Weather</string>
    <string name="loading">Data Loading</string>
    <string name="loc_not_enable">Location Not enable</string>
    <string name="location_dialog_message">To load the current accurate temperature you have to enable location</string>
    <string name="enable">Enable</string>
    <string name="sure_delet">Are you sure delete "</string>
    <string name="show_alert">Show Notification Alert when weather is dangerous</string>
    <string name="notific">Notification Alert</string>
    <string name="add_alert">Add Alert</string>
    <string name="notification">notification</string>
    <string name="alarm">alarm</string>
    <string name="type_of_event">Type Of Event</string>
    <string name="snow">Snow </string>
    <string name="thunderstorm">Thunderstorm</string>
    <string name="fog">mist/fog</string>
    <string name="rain">Rain</string>
    <string name="location_from_map">Location from map</string>
    <string name="map_loc">Map Location</string>
    <string name="enter_date">Enter Date</string>
    <string name="enter_time">Enter Time</string>
    <string name="weather">Weather</string>
    <string name="add_new_location">Add New Location</string>
</resources>